log/build_2023-09-18_16-03-01/labs_pkg/stderr.log
/usr/lib/python3/dist-packages/setuptools/command/easy_install.py:158: EasyInstallDeprecationWarning: easy_install command is deprecated. Use build and pip and other standards-based tools.
  warnings.warn(
/usr/lib/python3/dist-packages/setuptools/command/install.py:34: SetuptoolsDeprecationWarning: setup.py install is deprecated. Use build and pip and other standards-based tools.
  warnings.warn(
/usr/lib/python3/dist-packages/setuptools/command/install.py:34: SetuptoolsDeprecationWarning: setup.py install is deprecated. Use build and pip and other standards-based tools.
  warnings.warn(
  File "/home/teehee/ros2_ws/install/labs_pkg/lib/python3.10/site-packages/labs_pkg/my_talker.py", line 18
    		self.get_logger().info('Publishing: "Hello World: ' + str(self.counter_) + '"')↪→
    		                                                                               ^
SyntaxError: invalid character '↪' (U+21AA)

